# Rust

./: .env  .gitignore  Cargo.toml  gallery_dl.db-shm  get_urls.ps1  guess_title.py  nuke_all_and_redownload.ps1  sources.txt
gallery-dl-api/: .env  .gitignore  Cargo.toml  archive.txt  bulk_submit.ps1  check_partial_downloads.ps1  cookies.txt  dump_persons.ps1  gallery_dl.db  gallery_dl.db-shm  gallery_dl.db-wal  help.txt  setup_environment.ps1  temp_check.ps1
gallery-dl-api/migrations/: 001_initial.sql  002_add_image_dimensions.sql  003_add_unique_constraints.sql  004_add_request_title.sql  005_video_enhancements.sql  006_video_dimensions.sql  007_people.sql  008_add_image_colors.sql
gallery-dl-api/scratch/: check_db.rs
gallery-dl-api/src/: config.rs  db.rs  main.rs  pagination.rs  reset_checker.rs
gallery-dl-api/src/handlers/: galleries.rs  images.rs  mod.rs  persons.rs  requests.rs  videos.rs
gallery-dl-api/src/models/: gallery.rs  image.rs  mod.rs  person.rs  request.rs  video.rs
gallery-dl-api/src/queue/: worker.rs
gallery-dl-api/src/services/: auto_link.rs  custom_downloader.rs  downloader.rs  file_processor.rs  mod.rs  stashdb.rs  title_guesser.rs
gallery-dl-api/test_ytdlp/: Me at the zoo-jNQXAC9IVRw.webm
gallery-dl-ui/: index.html  package-lock.json  package.json
gallery-dl-ui/src/: App.jsx  api.js  index.css
gallery-dl-ui/src/components/: AppLayout.css  AppLayout.jsx  MediaGrid.css  (+14 more)
src/: db.rs  main.rs
src/handlers/: galleries.rs  images.rs  videos.rs
src/models/: image.rs  request.rs  video.rs
src/services/: file_processor.rs
(+14 files in other folders)
